--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -105,8 +105,8 @@ leadfinder:
 
   discovery:
     results-per-page: 20
-    max-pages-per-run: 1
-    default-max-serp-page: 5
+    max-pages-per-run: 2
+    default-max-serp-page: 20
     limit-per-run: 100
 
     queries:
@@ -114,76 +114,299 @@ leadfinder:
       # ==================================================
       # NIEDERSACHSEN — Emsland / Oldenburger Münsterland
       # ==================================================
-      - "Gemüsehof Meppen Kontakt"
-      - "Direktvermarkter Meppen Hofladen Kontakt"
-      - "Kartoffelhof Haselünne Impressum"
+      # Warstwa 1
+      - "Obsthof Meppen Kontakt"
+      - "Hofladen Meppen Impressum"
+      - "Direktvermarktung Meppen E-Mail"
+      - "Gemüsebau Betrieb Meppen Telefon"
+
+      - "Kartoffelhof Haselünne Kontakt"
+      - "Hofverkauf Haselünne Impressum"
+      - "Direktvermarktung Haselünne E-Mail"
+      - "Landwirtschaftlicher Betrieb Haselünne Telefon"
+
+      - "Spargelhof Papenburg Kontakt"
+      - "Hofladen Papenburg Impressum"
+      - "Direktvermarktung Papenburg E-Mail"
       - "Spargelhof Papenburg Telefon"
-      - "Erdbeerhof Cloppenburg E-Mail"
+
+      - "Erdbeerhof Cloppenburg Kontakt"
+      - "Hofladen Cloppenburg Impressum"
+      - "Direktvermarktung Cloppenburg E-Mail"
+      - "Gemüsebau Betrieb Cloppenburg Telefon"
+
       - "Gärtnerei Vechta Kontakt"
-      - "Jungpflanzenbetrieb Vechta Impressum"
-      - "Gewächshausbetrieb Cloppenburg Gemüse Kontakt"
-      - "Tomaten Gewächshaus Papenburg Kontakt"
-      - "Champignon Betrieb Cloppenburg Kontakt"
-      - "Pilzzucht Betrieb Vechta Kontakt"
-      - "Landwirtschaftlicher Betrieb Lingen Direktvermarktung Kontakt"
+      - "Hofladen Vechta Impressum"
+      - "Direktvermarktung Vechta E-Mail"
+      - "Jungpflanzenbetrieb Vechta Telefon"
+
+      - "Gemüsebau Betrieb Lingen Kontakt"
+      - "Hofladen Lingen Impressum"
+      - "Direktvermarktung Lingen E-Mail"
+      - "Landwirtschaftlicher Betrieb Lingen Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Emsland Kontakt"
+      - "Demeter Hof Emsland Kontakt"
+      - "Gemüsebau Betrieb Landkreis Emsland Impressum"
+      - "Hofverkauf Landkreis Emsland Kontakt"
+
+      - "Bioland Betrieb Oldenburger Münsterland Kontakt"
+      - "Demeter Hof Oldenburger Münsterland Kontakt"
+      - "Gemüsebau Betrieb Landkreis Vechta Impressum"
+      - "Hofverkauf Landkreis Cloppenburg Kontakt"
+
+
+      # ==================================================
+      # NIEDERSACHSEN — Hannover / Heide / Harz
+      # ==================================================
+      # Warstwa 1
+      - "Obsthof Celle Kontakt"
+      - "Hofladen Celle Impressum"
+      - "Direktvermarktung Celle E-Mail"
+      - "Obsthof Celle Telefon"
+
+      - "Gemüsehof Gifhorn Kontakt"
+      - "Hofladen Gifhorn Impressum"
+      - "Direktvermarktung Gifhorn E-Mail"
+      - "Gemüsebau Betrieb Gifhorn Telefon"
+
+      - "Kartoffelhof Peine Kontakt"
+      - "Hofverkauf Peine Impressum"
+      - "Direktvermarktung Peine E-Mail"
+      - "Kartoffelhof Peine Telefon"
+
+      - "Spargelhof Uelzen Kontakt"
+      - "Hofladen Uelzen Impressum"
+      - "Direktvermarktung Uelzen E-Mail"
+      - "Spargelhof Uelzen Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Lüneburger Heide Kontakt"
+      - "Demeter Hof Lüneburger Heide Kontakt"
+      - "Gemüsebau Betrieb Landkreis Celle Impressum"
+      - "Hofverkauf Landkreis Uelzen Kontakt"
+
 
       # ==================================================
       # NRW — Niederrhein / Münsterland
       # ==================================================
-      - "Gemüsehof Kleve Kontakt"
-      - "Direktvermarkter Kleve Hofladen Kontakt"
-      - "Kartoffelhof Geldern Impressum"
+      # Warstwa 1
+      - "Obsthof Kleve Kontakt"
+      - "Hofladen Kleve Impressum"
+      - "Direktvermarktung Kleve E-Mail"
+      - "Gemüsebau Betrieb Kleve Telefon"
+
+      - "Kartoffelhof Geldern Kontakt"
+      - "Hofverkauf Geldern Impressum"
+      - "Direktvermarktung Geldern E-Mail"
+      - "Kartoffelhof Geldern Telefon"
+
+      - "Spargelhof Straelen Kontakt"
+      - "Hofladen Straelen Impressum"
+      - "Direktvermarktung Straelen E-Mail"
       - "Spargelhof Straelen Telefon"
-      - "Erdbeerhof Kevelaer E-Mail"
-      - "Gemüsehof Coesfeld Kontakt"
+
+      - "Erdbeerhof Kevelaer Kontakt"
+      - "Hofladen Kevelaer Impressum"
+      - "Direktvermarktung Kevelaer E-Mail"
+      - "Erdbeerhof Kevelaer Telefon"
+
+      - "Gemüsebau Betrieb Coesfeld Kontakt"
+      - "Hofladen Coesfeld Impressum"
+      - "Direktvermarktung Coesfeld E-Mail"
+      - "Gemüsebau Betrieb Coesfeld Telefon"
+
       - "Gemüsebau Betrieb Warendorf Kontakt"
-      - "Gewächshausbetrieb Straelen Gemüse Kontakt"
-      - "Tomaten Gewächshausbetrieb Geldern Kontakt"
-      - "Gurken Gewächshausbetrieb Kleve Kontakt"
-      - "Champignon Betrieb Coesfeld Kontakt"
-      - "Pilzzucht Betrieb Warendorf Kontakt"
+      - "Hofladen Warendorf Impressum"
+      - "Direktvermarktung Warendorf E-Mail"
+      - "Gemüsebau Betrieb Warendorf Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Niederrhein Kontakt"
+      - "Demeter Hof Niederrhein Kontakt"
+      - "Gemüsebau Betrieb Kreis Kleve Impressum"
+      - "Hofverkauf Kreis Kleve Kontakt"
+
+      - "Bioland Betrieb Münsterland Kontakt"
+      - "Demeter Hof Münsterland Kontakt"
+      - "Gemüsebau Betrieb Kreis Coesfeld Impressum"
+      - "Hofverkauf Kreis Warendorf Kontakt"
+
+
+      # ==================================================
+      # NRW — Rhein-Erft / Rheinland
+      # ==================================================
+      # Warstwa 1
+      - "Obsthof Bergheim Kontakt"
+      - "Hofladen Bergheim Impressum"
+      - "Direktvermarktung Bergheim E-Mail"
+      - "Obsthof Bergheim Telefon"
+
+      - "Gemüsehof Kerpen Kontakt"
+      - "Hofladen Kerpen Impressum"
+      - "Direktvermarktung Kerpen E-Mail"
+      - "Gemüsebau Betrieb Kerpen Telefon"
+
+      - "Kartoffelhof Euskirchen Kontakt"
+      - "Hofverkauf Euskirchen Impressum"
+      - "Direktvermarktung Euskirchen E-Mail"
+      - "Kartoffelhof Euskirchen Telefon"
+
+      - "Spargelhof Brühl Kontakt"
+      - "Hofladen Brühl Impressum"
+      - "Direktvermarktung Brühl E-Mail"
+      - "Spargelhof Brühl Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Rhein-Erft-Kreis Kontakt"
+      - "Demeter Hof Rhein-Erft-Kreis Kontakt"
+      - "Gemüsebau Betrieb Rheinland Impressum"
+      - "Hofverkauf Rheinland Kontakt"
+
 
       # ==================================================
       # BADEN-WÜRTTEMBERG — Kaiserstuhl / Freiburg / Bodensee
       # ==================================================
-      - "Obsthof Endingen Kaiserstuhl Kontakt"
-      - "Erdbeerhof Breisach Hofverkauf Kontakt"
-      - "Spargelhof Bad Krozingen Kontakt"
+      # Warstwa 1
+      - "Obsthof Endingen Kontakt"
+      - "Hofladen Endingen Impressum"
+      - "Direktvermarktung Endingen E-Mail"
+      - "Obsthof Kaiserstuhl Telefon"
+
+      - "Erdbeerhof Breisach Kontakt"
+      - "Hofverkauf Breisach Impressum"
+      - "Direktvermarktung Breisach E-Mail"
+      - "Erdbeerhof Breisach Telefon"
+
       - "Gemüsebau Betrieb Freiburg Kontakt"
-      - "Gewächshausbetrieb Freiburg Gemüse Kontakt"
-      - "Kräuter Betrieb Kaiserstuhl Direktvermarktung Kontakt"
-      - "Champignon Betrieb Breisgau Kontakt"
-      - "Pilzzucht Betrieb Breisgau Kontakt"
+      - "Hofladen Freiburg Impressum"
+      - "Direktvermarktung Freiburg E-Mail"
+      - "Gewächshausbetrieb Freiburg Telefon"
 
       - "Obsthof Ravensburg Kontakt"
-      - "Gemüsehof Tettnang Kontakt"
+      - "Hofladen Ravensburg Impressum"
+      - "Direktvermarktung Ravensburg E-Mail"
+      - "Obsthof Ravensburg Telefon"
+
       - "Apfelhof Friedrichshafen Kontakt"
+      - "Hofverkauf Friedrichshafen Impressum"
+      - "Direktvermarktung Friedrichshafen E-Mail"
+      - "Apfelhof Friedrichshafen Telefon"
+
       - "Beerenhof Überlingen Kontakt"
-      - "Gemüsebau Betrieb Bodenseekreis Kontakt"
-      - "Gewächshausbetrieb Bodenseekreis Kontakt"
-      - "Champignon Betrieb Bodenseekreis Kontakt"
-      - "Pilzzucht Betrieb Ravensburg Kontakt"
+      - "Hofladen Überlingen Impressum"
+      - "Direktvermarktung Überlingen E-Mail"
+      - "Beerenhof Überlingen Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Kaiserstuhl Kontakt"
+      - "Demeter Hof Kaiserstuhl Kontakt"
+      - "Gemüsebau Betrieb Breisgau Impressum"
+      - "Hofverkauf Breisgau Kontakt"
+
+      - "Bioland Betrieb Bodenseekreis Kontakt"
+      - "Demeter Hof Bodenseekreis Kontakt"
+      - "Gemüsebau Betrieb Bodenseekreis Impressum"
+      - "Hofverkauf Bodenseekreis Kontakt"
+
+
+      # ==================================================
+      # BADEN-WÜRTTEMBERG — Neckar / Hohenlohe
+      # ==================================================
+      # Warstwa 1
+      - "Obsthof Heilbronn Kontakt"
+      - "Hofladen Heilbronn Impressum"
+      - "Direktvermarktung Heilbronn E-Mail"
+      - "Obsthof Heilbronn Telefon"
+
+      - "Gemüsehof Öhringen Kontakt"
+      - "Hofladen Öhringen Impressum"
+      - "Direktvermarktung Öhringen E-Mail"
+      - "Gemüsebau Betrieb Öhringen Telefon"
+
+      - "Kartoffelhof Schwäbisch Hall Kontakt"
+      - "Hofverkauf Schwäbisch Hall Impressum"
+      - "Direktvermarktung Schwäbisch Hall E-Mail"
+      - "Kartoffelhof Schwäbisch Hall Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Hohenlohe Kontakt"
+      - "Demeter Hof Hohenlohe Kontakt"
+      - "Gemüsebau Betrieb Landkreis Heilbronn Impressum"
+      - "Hofverkauf Landkreis Schwäbisch Hall Kontakt"
+
 
       # ==================================================
       # RHEINLAND-PFALZ — Pfalz / Rheinhessen
       # ==================================================
-      - "Obsthof Neustadt Weinstraße Kontakt"
+      # Warstwa 1
+      - "Obsthof Neustadt an der Weinstraße Kontakt"
+      - "Hofladen Neustadt an der Weinstraße Impressum"
+      - "Direktvermarktung Neustadt Weinstraße E-Mail"
+      - "Obsthof Neustadt Weinstraße Telefon"
+
       - "Erdbeerhof Bad Dürkheim Kontakt"
+      - "Hofverkauf Bad Dürkheim Impressum"
+      - "Direktvermarktung Bad Dürkheim E-Mail"
+      - "Erdbeerhof Bad Dürkheim Telefon"
+
       - "Spargelhof Schifferstadt Kontakt"
+      - "Hofladen Schifferstadt Impressum"
+      - "Direktvermarktung Schifferstadt E-Mail"
+      - "Spargelhof Schifferstadt Telefon"
+
       - "Kartoffelhof Germersheim Kontakt"
-      - "Gemüsebau Betrieb Landau Pfalz Kontakt"
-      - "Gewächshausbetrieb Landau Gemüse Kontakt"
-      - "Champignon Betrieb Germersheim Kontakt"
-      - "Pilzzucht Betrieb Landau Kontakt"
+      - "Hofverkauf Germersheim Impressum"
+      - "Direktvermarktung Germersheim E-Mail"
+      - "Kartoffelhof Germersheim Telefon"
+
+      - "Gemüsebau Betrieb Landau in der Pfalz Kontakt"
+      - "Hofladen Landau in der Pfalz Impressum"
+      - "Direktvermarktung Landau Pfalz E-Mail"
+      - "Gemüsebau Betrieb Landau Pfalz Telefon"
 
       - "Obsthof Worms Kontakt"
-      - "Gemüsehof Alzey Kontakt"
-      - "Erdbeerhof Alzey Kontakt"
-      - "Spargelhof Bingen Kontakt"
-      - "Gemüsebau Betrieb Mainz Land Kontakt"
-      - "Gewächshausbetrieb Mainz Gemüse Kontakt"
-      - "Jungpflanzenbetrieb Rheinhessen Kontakt"
-      - "Pilzzucht Betrieb Worms Kontakt"
+      - "Hofladen Worms Impressum"
+      - "Direktvermarktung Worms E-Mail"
+      - "Obsthof Worms Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Pfalz Kontakt"
+      - "Demeter Hof Pfalz Kontakt"
+      - "Gemüsebau Betrieb Landkreis Germersheim Impressum"
+      - "Hofverkauf Landkreis Germersheim Kontakt"
+
+      - "Bioland Betrieb Rheinhessen Kontakt"
+      - "Demeter Hof Rheinhessen Kontakt"
+      - "Gemüsebau Betrieb Rheinhessen Impressum"
+      - "Hofverkauf Rheinhessen Kontakt"
+
+
+      # ==================================================
+      # RHEINLAND-PFALZ — Mosel / Eifel
+      # ==================================================
+      # Warstwa 1
+      - "Obsthof Trier Kontakt"
+      - "Hofladen Trier Impressum"
+      - "Direktvermarktung Trier E-Mail"
+      - "Obsthof Trier Telefon"
+
+      - "Gemüsehof Wittlich Kontakt"
+      - "Hofladen Wittlich Impressum"
+      - "Direktvermarktung Wittlich E-Mail"
+      - "Gemüsebau Betrieb Wittlich Telefon"
+
+      - "Kartoffelhof Bitburg Kontakt"
+      - "Hofverkauf Bitburg Impressum"
+      - "Direktvermarktung Bitburg E-Mail"
+      - "Kartoffelhof Bitburg Telefon"
+
+      # Warstwa 2
+      - "Bioland Betrieb Mosel Kontakt"
+      - "Demeter Hof Mosel Kontakt"
+      - "Gemüsebau Betrieb Eifel Impressum"
+      - "Hofverkauf Eifel Kontakt"
 
 app:
   outreach:
